# Rogue

./: .gitmodules  CMakeLists.txt  FEATURES.md  FEATURES_CRONJOB.md  Map.json  Map2.json  Map3.json  Map_AStar1_Wall.json  Map_AStar2_Trap.json  Map_AStar3_Maze.json  Map_AStar4_Snake.json  Map_Village.json  shell.nix  testMap.json  todo
data/tilesets/Pixel Crawler - Free Pack/Entities/Characters/Body_A/Animations/Carry_Idle/: Carry_Idle_Down.json  Carry_Idle_Side.json  Carry_Idle_Up.json
data/tilesets/Pixel Crawler - Free Pack/Entities/Characters/Body_A/Animations/Carry_Run/: Carry_Run_Down.json  Carry_Run_Side.json  Carry_Run_Up.json
data/tilesets/Pixel Crawler - Free Pack/Entities/Characters/Body_A/Animations/Carry_Walk/: Carry_Walk_Down.json  Carry_Walk_Side.json  Carry_Walk_Up.json
data/tilesets/Pixel Crawler - Free Pack/Entities/Characters/Body_A/Animations/Collect_Base/: Collect_Down.json  Collect_Side.json  Collect_Up.json
data/tilesets/Pixel Crawler - Free Pack/Entities/Characters/Body_A/Animations/Crush_Base/: Crush_Down.json  Crush_Side.json  Crush_Up.json
data/tilesets/Pixel Crawler - Free Pack/Entities/Characters/Body_A/Animations/Death_Base/: Death_Down.json  Death_Side.json  Death_Up.json
data/tilesets/Pixel Crawler - Free Pack/Entities/Characters/Body_A/Animations/Fishing_Base/: Fishing_Down.json  Fishing_Side.json  Fishing_Up.json
data/tilesets/Pixel Crawler - Free Pack/Entities/Characters/Body_A/Animations/Hit_Base/: Hit_Down.json  Hit_Side.json  Hit_Up.json
data/tilesets/Pixel Crawler - Free Pack/Entities/Characters/Body_A/Animations/Idle_Base/: Idle_Down.json  Idle_Side.json  Idle_Up.json
data/tilesets/Pixel Crawler - Free Pack/Entities/Characters/Body_A/Animations/Pierce_Base/: Pierce_Down.json  Pierce_Side.json  Pierce_Top.json
data/tilesets/Pixel Crawler - Free Pack/Entities/Characters/Body_A/Animations/Run_Base/: Run_Down.json  Run_Side.json  Run_Up.json
data/tilesets/Pixel Crawler - Free Pack/Entities/Characters/Body_A/Animations/Slice_Base/: Slice_Down.json  (+2 more)
data/tilesets/Pixel Crawler - Free Pack/Entities/NPCS/Knight/Death/: Death.json
data/tilesets/Pixel Crawler - Free Pack/Entities/NPCS/Rogue/Death/: Death.json
data/tilesets/Pixel Crawler - Free Pack/Environment/Props/Animated/: Pan_01.json  Pan_02.json  Pan_03.json  Pan_04.json  Pan_05.json
data/tilesets/Pixel Crawler - Free Pack/Environment/Props/Static/: Dungeon_Props.json  Esoteric.json  Farm.json  Furniture.json  Meat.json  Pan.json  Resources.json  Rocks.json  Shadows.json  Tools.json  Vegetation.json
data/tilesets/Pixel Crawler - Free Pack/Environment/Structures/Buildings/: Floors.json  Props.json  Roofs.json  Walls.json
data/tilesets/Pixel Crawler - Free Pack/Environment/Structures/Stations/Alchemy/: Alchemy.json  Alchemy_Table_01.json  Alchemy_Table_02.json  Alchemy_Table_03.json
data/tilesets/Pixel Crawler - Free Pack/Environment/Structures/Stations/Anvil/: Anvil.json  Anvil_01.json  Anvil_02.json  Anvil_03.json
data/tilesets/Pixel Crawler - Free Pack/Environment/Structures/Stations/Bonfire/: Bonfire.json  Bonfire_01.json  Bonfire_02.json  Bonfire_03.json  Bonfire_04.json  Bonfire_05.json  Bonfire_06.json  Bonfire_07.json  Bonfire_08.json  Bonfire_09.json  Bonfire_10.json  Fire_01.json  Fire_02.json  Smoke.json
data/tilesets/Pixel Crawler - Free Pack/Environment/Structures/Stations/Cooking Station/: Cooking Station.json
data/tilesets/Pixel Crawler - Free Pack/Environment/Structures/Stations/Furnace/: Bricks_01.json  Bricks_02.json  Bricks_03.json  Furnace.json  Iron_01.json  Iron_02.json  Iron_03.json  Stone_01.json  Stone_02.json  Stone_03.json
data/tilesets/Pixel Crawler - Free Pack/Environment/Structures/Stations/Sawmill/: Base.json  Level_1.json  Level_2.json  Level_3.json
data/tilesets/Pixel Crawler - Free Pack/Environment/Structures/Stations/Workbench/: Workbench.json
data/tilesets/Pixel Crawler - Free Pack/Environment/Tilesets/: Dungeon_Tiles.json  Floors_Tiles.json  Wall_Tiles.json  Wall_Variations.json  Water.json  Water_tiles.json
data/tilesets/Pixel Crawler - Free Pack/Weapons/Bone/: Bone.json
data/tilesets/Pixel Crawler - Free Pack/Weapons/Hands/: Hands.json
data/tilesets/Pixel Crawler - Free Pack/Weapons/Wood/: Wood.json
fonts/terminus-mono/: license.txt  readme.txt
include/: AI.h  AIChatWindow.h  Agent.h  AgentContextWindow.h  CameraFix.h  Character.h  Command.h  Components.h  DebugLog.h  DebugWindowState.h  DebugWindows.h  Defaults.h  DrawAsciiDebug.h  Entity.h  EntityInfoWindow.h  Game.h  InputHandler.h  Map.h  MapReloader.h  NPC.h  PathFinding.h  ResourceManager.h  Tile.h  Window.h
scripts/: export_assets.sh
src/: AI.cpp  AIChatWindow.cpp  AStarVisualizer.cpp  Agent.cpp  AgentContextWindow.cpp  CameraFix.cpp  Character.cpp  Command.cpp  DebugLog.cpp  DebugWindowState.cpp  DebugWindows.cpp  DrawAsciiDebug.cpp  EntityInfoWindow.cpp  Game.cpp  GameDraw.cpp  GameECS.cpp  GameSystems.cpp  InputHandler.cpp  Map.cpp  MapReloader.cpp  NPC.cpp  PathFinding.cpp  ResourceManager.cpp  main.cpp
(+37 files in other folders)
